// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Limited Reserve V3 Transfers from Spiritnet Account Bob -> HydraDx > receiver events currencies 1`] = `
[
  {
    "data": {
      "amount": 10000000000000,
      "currencyId": 60,
      "who": "7L1RwNWSthWi53EBAagAtVt6PUV6kfr7ofnqzv6F1YadjYaf",
    },
    "method": "Deposited",
    "section": "currencies",
  },
]
`;

exports[`Limited Reserve V3 Transfers from Spiritnet Account Bob -> HydraDx > receiver events tokens 1`] = `
[
  {
    "data": {
      "amount": 10000000000000,
      "currencyId": 60,
      "who": "7L1RwNWSthWi53EBAagAtVt6PUV6kfr7ofnqzv6F1YadjYaf",
    },
    "method": "Endowed",
    "section": "tokens",
  },
  {
    "data": {
      "amount": 10000000000000,
      "currencyId": 60,
      "who": "7L1RwNWSthWi53EBAagAtVt6PUV6kfr7ofnqzv6F1YadjYaf",
    },
    "method": "Deposited",
    "section": "tokens",
  },
]
`;

exports[`Limited Reserve V3 Transfers from Spiritnet Account Bob -> HydraDx > receiver events xcmpQueue 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 400000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Limited Reserve V3 Transfers from Spiritnet Account Bob -> HydraDx > sender events xcm pallet 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "proofSize": 0,
          "refTime": 400000000,
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Limited Reserve V3 Transfers from Spiritnet Account Bob -> HydraDx > sender events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
